--- a/template.yaml
+++ b/template.yaml
@@ -7,7 +7,7 @@ metadata:
   tags:
     - recommended
 spec:
-  owner: user:default/skitamura7446
+  owner: user:default/YusukeAkasaka
   type: website
 
   parameters:
